--- a/springmvcmybatistest/src/main/resources/database.properties
+++ b/springmvcmybatistest/src/main/resources/database.properties
@@ -1,7 +1,10 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/config?allowMultiQueries=true
-jdbc.username=root
-jdbc.password=123456
+jdbc.driver=org.postgresql.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/config?allowMultiQueries=true
+jdbc.url=jdbc:postgresql://172.21.11.30:8080/crm_morita_dev?allowMultiQueries=true
+#jdbc.username=root
+jdbc.username=postgres
+#jdbc.password=123456
+jdbc.password=11
 apiurl=http://api.wdgj.com/wdgjcloud/api
 appkey=16843421
 logDirectory=D:/spring/logs
