--- a/springmvcmybatistest/pom.xml
+++ b/springmvcmybatistest/pom.xml
@@ -152,7 +152,12 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.47</version>
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.0.8.Final</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
@@ -176,7 +181,7 @@
       <artifactId>quartz</artifactId>
       <version>2.3.0</version>
     </dependency>
-  </dependencies>
+     </dependencies>
 
   <build>
     <plugins>
